--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ production:
   adapter: mysql2
   database: humming_baby
   username: admin
-  host: hummingbaby.caaytpdn8rwl.ap-northeast-2.rds.amazonaws.com
+  host: yeahap.caaytpdn8rwl.ap-northeast-2.rds.amazonaws.com
   password: <%= ENV['RDS_ADMIN_PASSWORD'] %>
   port: 3306
   pool: 5
