--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ test:
 production:
   <<: *default
   adapter: mysql2
-  database: humming_baby
+  database: yeahap
   username: admin
   host: yeahap.caaytpdn8rwl.ap-northeast-2.rds.amazonaws.com
   password: <%= ENV['RDS_ADMIN_PASSWORD'] %>
